[package]
name = "ld49"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = "0.8.0-alpha"
serde = "1"

# TODO: remove
[patch.crates-io]
batbox = { git = "https://github.com/kuviman/geng" }
batbox-derive = { git = "https://github.com/kuviman/geng" }
ugli = { git = "https://github.com/kuviman/geng" }
ugli-raw = { git = "https://github.com/kuviman/geng" }
ugli-derive = { git = "https://github.com/kuviman/geng" }
geng = { git = "https://github.com/kuviman/geng" }
geng-derive = { git = "https://github.com/kuviman/geng" }
geng-ui-macros = { git = "https://github.com/kuviman/geng" }